methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:22: error: ':' expected but ',' found.
def faireMotif(X,Y){
                ^PictureMono2:41: error: identifier expected but '}' found.
}
^